<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_baseline_notifications_24"
        android:tint="@color/secondary_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageCategory"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_round_category_24"
        android:tint="@color/primary_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="Piano Food"
        android:textColor="@color/primary_label"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageCategory"
        app:layout_constraintStart_toEndOf="@+id/imageCategory"
        app:layout_constraintTop_toTopOf="@id/imageCategory" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:src="@drawable/ic_round_keyboard_arrow_down_24"
        android:tint="@color/primary_label"
        app:layout_constraintBottom_toBottomOf="@id/textCategory"
        app:layout_constraintStart_toEndOf="@id/textCategory"
        app:layout_constraintTop_toTopOf="@id/textCategory" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/imageCategory">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_baseline_search_24"
            android:tint="@color/primary_label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@null"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/primary_label"
            android:textColorHint="@color/secondary_label"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRecommended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintBottom_toTopOf="@id/smoothBottomBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageRecommendedMovie"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/photo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="@dimen/_8sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageRecommendedMovie"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/sezar_salad"
                    android:textColor="@color/primary_label"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/diet_food"
                    android:textColor="@color/secondary_label"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/_15_min"
                    android:textColor="@color/secondary_label"
                    android:textSize="@dimen/_10ssp" />

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="4.5" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/background_favorite"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_round_favorite_24"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textRecommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/recommended"
        android:textColor="@color/primary_label"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardRecommended"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/textViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/view_all"
        android:textColor="@color/secondary_label"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@id/textRecommended"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textRecommended"/>

<androidx.viewpager2.widget.ViewPager2
    android:id="@+id/moviesViewPager"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="@dimen/_24sdp"
    android:layout_marginBottom="@dimen/_24sdp"
    android:paddingStart="@dimen/_50sdp"
    android:paddingEnd="@dimen/_50sdp"
    app:layout_constraintBottom_toTopOf="@+id/textRecommended"
    app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>
    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/smoothBottomBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@color/background"
        app:iconSize="@dimen/_18sdp"
        app:iconTint="@color/bottom_bar_icon_tint"
        app:iconTintActive="@color/bottom_bar_icon_tint_active"
        app:indicatorColor="@color/bottom_bar_indicator_color"
        app:indicatorRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bottom_navigation"
        app:textColor="@color/bottom_bar_text_color"
        app:textSize="@dimen/_10ssp" />


</androidx.constraintlayout.widget.ConstraintLayout>